# debit

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  ProjectHome.md  README  _far_v4.h  _far_v5.h  analysis.c  analysis.h  autodo.sh  bit2pdf.c  bitarray.c  bitarray.h  bitdraw.h  bitheader.c  bitheader.h  bitstream.c  bitstream.h  bitstream_high.h  bitstream_packets.h  bitstream_parser.c  bitstream_parser.h  bitstream_parser_common.c  bitstream_parser_v4.c  bitstream_parser_v5.c  bitstream_v4.c  bitstream_v5.h  bitstream_write.c  bitstream_write.h  cfgbit.h  configure.ac  connexity.c  connexity.h  debit.c  debitlog.h  design.h  design_common.h  design_s3.h  (+23 more)
ac_macros/: ax_check_aligned_access_required.m4  debit_feature_enable.m4
altera/: Makefile.am  bitarray.c  bitarray.h  bitstream.c  bitstream.h  bitstream_header.c  bitstream_header.h  crc-ccitt.c  crc-ccitt.h  debit.c
codes/: Makefile.am  crc-ibm.c  crc-ibm.h  crc-tables.c  crc32-c.c  crc32-c.h  xhamming.c  xhamming.h
data/: .gitignore  Makefile.am  bioi_control.db  bioi_data.db  bioi_dataraw.db  bioibram_data.db  bioibram_dataraw.db  bram_control.db  bram_data.db  bram_dataraw.db  bterm_dataraw.db  btermbram_data.db  btermbram_dataraw.db  build_common.inc  clb_control.db  clb_pips_dataraw.db  dbtoh.m4  dbtoini.m4  generate_vII_chip.pl  intervals.pl  lioi_control.db  lioi_dataraw.db  lterm_data.db  lterm_dataraw.db  pips_all_compiled.h  pips_all_compiled.m4  pips_compiled.h  pips_compiled_common.h  piptoctrlini.m4  piptodataini.m4  rioi_control.db  rioi_data.db  rioi_dataraw.db  rterm_dataraw.db  tioi_control.db  tioi_data.db  tioi_dataraw.db  tioibram_control.db  tioibram_dataraw.db  tterm_dataraw.db  (+5 more)
data/bterm/: control.db
data/lterm/: control.db
data/spartan3/: Makefile.am  generate_s3_chip.pl  pipsdb.h
data/spartan3/clb/: all.db
data/tioibram/: data.db
data/tterm/: data.db
data/virtex2/: Makefile.am  generate_vII_chip.pl  pipsdb.h
data/virtex2/bioi/: all.db
data/virtex2/bioibram/: all.db  control.db
data/virtex2/bram/: all.db
data/virtex2/bterm/: all.db  data.db  implicit.db
data/virtex2/btermbram/: all.db  control.db
data/virtex2/clb/: all.db  connexcontrol.db  connexdata.db  data.db  implicit.db  lcontrol.db  ldata.db
data/virtex2/lioi/: all.db  data.db
data/virtex2/lrioi/: all.db
data/virtex2/lterm/: all.db  implicit.db
data/virtex2/rioi/: all.db
data/virtex2/rterm/: all.db  control.db  data.db  implicit.db
data/virtex2/tbioi/: all.db
data/virtex2/tbioibram/: all.db
data/virtex2/tioi/: all.db
data/virtex2/tioibram/: all.db
data/virtex2/tterm/: all.db  control.db
data/virtex2/ttermbram/: all.db  implicit.db
data/virtex4/: Makefile.am  generate_v4_chip.pl  pipsdb.h
data/virtex4/int/: all.db  control.db  data.db
data/virtex5/: Makefile.am  generate_v5_chip.pl  pipsdb.h
data/virtex5/int/: all.db  control.db  data.db
data/xc2v2000/: chip_control  chip_data
debian/: .gitignore  Makefile.am  changelog  control  copyright  files  rules
desktop/: Makefile.am  debit.desktop  debit.xml  ulogic
desktop/artwork/: .gitignore  Makefile.am
doc/: .gitignore  Makefile.am
doc/man/: Makefile.am  all.xml  altera.xml  bit2pdf.xml  bitisolation.xml  debit.xml  diff_bin_pos.xml  entryinfo.xml  seealso.xml  xdl2bit.xml  xiledit.xml
rpm/: Makefile.am  debit-0.1-1.spec  debit-data-0.1-1.spec  debit.spec
tests/: .gitignore  Makefile.am  log-functions  speed.sh  test.sh  test_s3.sh  test_v2.sh  test_v4.sh  test_v5.sh  testmake.mk  valgrind.exclude
utils/: Makefile.am  diff_bin.c
utils/correlation/: Makefile.am  algo_basic.c  algos.h  bitisolation.c  bitisolation.h  bitisolation_db.h  pip_db.c  pip_db.h  state_db.c
windows/: Makefile.am  convert.sh  cross.env  debit.nsi.tmpl  gendb.sh  xcompile.sh
windows/scripts/: Makefile.am  bit2bram.bat  bit2luts.bat  bit2pdf.bat  bit2pips.bat  xdl2bit.bat
xdl/: .gitignore  Makefile.am  parser.h  xdl2bit.c  xdl_lexer.l  xdl_parser.y
xiledit/: .gitignore  Makefile.am  callbacks.c  callbacks.h  xildraw.c  xildraw.h  xiledit.c  xiledit.glade  xiledit.gladep
