# This directory only contains data file
SUBDIRS=virtex2 virtex4 virtex5

DBGENSCRIPTS=wires_to_db.pl wires_to_db_v5.pl

dist_noinst_SCRIPTS=$(DBGENSCRIPTS) dbtoh.m4  dbtoini.m4 \
		    piptoctrlini.m4 piptodataini.m4 \
                    pips_all_compiled.m4
dist_noinst_HEADERS=pips_compiled.h  wiring_compiled.h pips_all_compiled.h
