###
# Control data
###

#pips
DATAPREFIX=clb tterm bterm rterm lterm lioi rioi tioi bioi \
	   bram ttermbram btermbram bioibram tioibram

#chip geometry
CHIPS=40 80 250 500 1000 1500 2000 3000 4000 6000 8000
CHIP_PFX=xc2v
SITE_INCL=sites_v2.h
GENSCRIPT=generate_vII_chip.pl

include $(srcdir)/../build_common.inc
